<resources>
    <string name="app_name">Petodex</string>
    <string name="splash">Evcil hayvanlarınız hakkında herşey</string>
    <string name="tour">KISA TUR İÇİN DOKUN</string>
    <string name="next">İleri</string>
    <string name="pre">Geri</string>
    <string name="finish">Anladım</string>
    <string name="login">GİRİŞ</string>
    <string name="password">Parola</string>
    <string name="user_name">Kullanıcı adı</string>
    <string name="remember">Beni hatırla</string>
    <string name="login_button">Giriş Yap</string>
    <string name="login_type">Ya da herhangi biri ile giriş</string>
    <string name="remember_password">Şifreni mi unuttun ?</string>
    <string name="new_account">Üyeliğin yok mu ? Kaydol</string>
    <string name="pet_info_title">Evcil hayvanlarım</string>
    <string name="new_pet">Yeni evcil hayvanımı ekle</string>
    <string name="addPetName">Adı</string>
    <string name="addPetAge">Yaşı</string>
    <string name="addPetStrain">Cinsi</string>
    <string name="addPetType">Türü</string>
    <string name="add">Ekle</string>

</resources>
